Revision history for Perl extension DBIx::Skinny

0.0711
   2010-XX-XX
        - FIXED : typo s/realy/really/ (thanks azumakuniyuki)
        - FIXED : typo s/potition/position/g (thanks azumakuniyuki)
        - FIXED : bind_param bug fixed.

0.0710
   2010-04-22
        - MOD : support bind_param.
        - MOD : add replace method.
        - INCOMPATIBLE MOD: pre_insert and post_insert trigger should not work in bulk_insert. mysql driver does not effect this change. (walf443)
        - fix typo s/alreay/already/ ( magicalhat++ )
        - FIXED: loose connect_options after new (thanks yibe)

0.0709
   2010-04-20
        - FIXED: check get_column argument and check no select column case (walf443)
        - FIXED: typo fixed. s/coddnnect_options/connect_options/. (thanks yibe)

0.0708
   2010-04-07
        - FIXED: s/is not exist/dose not exist/g (thanks azumakuniyuki and mizzy)
        - FIXED: fetch data for find_or_create. (walf443) 
        - FIXED: SQL function was able to be used by add_where method. 

0.0707
   2010-04-05
        - ADD: added on_connect_do option. It's useful for hooking when connected (walf443)
        - FIXED: IO::Handle->autoflush is not exist on some IO::Handle version (walf443)

0.0706
   2010-03-23
        - MOD: accept $dbh for DBIx::Skinny->new() (tokuhirom)
        - FIXED: utf8_(on|off) should mention is_utf8_column (tokuhirom)

0.0705
   2010-03-18
        - MOD: add Profiler::Trace (thanks Makamaka Hannyaharamitu and tokuhirom)

0.0704
   2010-03-16
        - MOD: allow ArrayRef for search_named argument (thanks walf443)
        - MOD: add check schema attribute (thanks nekoya) 
        - FIXED: t/217_transaction_sqlite.t requires DBD::SQLite (thanks tokuhirom)

0.0703
   2010-03-09
        - FIXED: DBD::* bulk_insert txn (report Makamaka Hannyaharamitu)
        - MOD: support multi pk (thanks Makamaka Hannyaharamitu)
        - MOD: logging txn_(begin|rollback|commit) (thanks Makamaka Hannyaharamitu)